--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -1,8 +1,19 @@
 @import '../mixins.scss';
 
 .navbar {
-  background-color: #333;
+  // background-color: #333;
   padding: 10px, 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 3px solid #ccc;
+  padding-left: 10px;
+  padding-right: 10px;
+
+  .logo {
+    @include logo-font;
+    font-style: italic;
+  }
 
   .navbar__list {
     list-style-type: none;
@@ -22,21 +33,22 @@
   }
 
   .navbar__link {
-    color: #fff;
+    color: #000000;
     text-decoration: none;
 
     &:hover {
-      color: #ccc;
+      color: #676464;
     }
   }
 
   .navbar--right {
     display: flex;
     align-items: center;
+    padding-left: 20px;
 
     @include phone {
       flex-direction: column;
-      margin-top: 10px
+      margin-top: 10px;
     }
   }
 }
