--- a/client/src/components/mixins.scss
+++ b/client/src/components/mixins.scss
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+@mixin logo-font {
+  font-family: "Poppins", sans-serif;
+}
+
+@mixin regular-font {
+  font-family: "Noto Sans", sans-serif;
+}
+
 // X-Small devices (portrait phones, less than 576px)
 @mixin phone {
   @media (max-width: rem(575.98)) {
@@ -41,5 +51,5 @@
 }
 
 @function rem($value) {
-  @return ($value / 16)+rem;
+  @return calc($value / 16)
 }
