--- a/client/src/components/Auth/Auth.scss
+++ b/client/src/components/Auth/Auth.scss
@@ -12,13 +12,26 @@
 .auth-form {
   display: flex;
   flex-direction: column;
+  padding-top: 4px;
 
   .auth-buttons {
     display: flex;
     align-items: center;
+    padding: 4px 0;
 
     .auth-button {
       width: 80px;
+      padding: 2.5px 16px;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color .2s ease;
+      background-color: #FFA500;
+
+      &:hover {
+        background-color: #FF8C00;
+      }
     }
 
     .auth-message {
@@ -30,10 +43,6 @@
 .auth-form label {
   display: flex;
   align-items: center;
-}
-
-.auth-form input {
-  margin-left: 8px;
 }
 
 .auth-switch {
