--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -7,8 +7,13 @@
   align-items: center;
   justify-content: space-between;
   border-bottom: 3px solid #ccc;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 90px;
+  padding-right: 90px;
+
+  @include tablet {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 
   .logo {
     @include logo-font;
@@ -21,7 +26,8 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    // max-width: 1200px;
+    max-width: 500px;
+    padding-right: 50px;
   }
 
   .navbar__item {
@@ -29,6 +35,11 @@
 
     @include phone {
       margin-bottom: 10px;
+    }
+
+    &.active {
+      font-weight: bold;
+      border-bottom: 2px solid #FFA500;
     }
   }
 
@@ -43,12 +54,22 @@
 
   .navbar--right {
     display: flex;
-    align-items: center;
-    padding-left: 20px;
+    flex-direction: row;
 
-    @include phone {
-      flex-direction: column;
-      margin-top: 10px;
+    .navbar__login {
+      display: flex;
+      align-items: center;
+      padding-left: 60px;
+
+      @include tablet {
+        padding-left: 30px;
+      }
+
+      @include phone {
+        padding-left: 0;
+        flex-direction: column;
+        margin-top: 10px;
+      }
     }
   }
 }
