--- a/client/src/components/mixins.scss
+++ b/client/src/components/mixins.scss
@@ -8,48 +8,20 @@
   font-family: "Noto Sans", sans-serif;
 }
 
-// X-Small devices (portrait phones, less than 576px)
 @mixin phone {
-  @media (max-width: rem(575.98)) {
+  @media (max-width: 575.98px) {
     @content;
   }
 }
 
-// Small devices (landscape phones, less than 768px)
-@mixin phone-landscape {
-  @media (max-width: rem(767.98)) {
-    @content;
-  }
-}
-
-// Medium devices (tablets, less than 992px)
 @mixin tablet {
-  @media (max-width: rem(991.98)) {
+  @media (max-width: 991.98px) {
     @content;
   }
 }
 
-// Large devices (desktops, less than 1200px)
 @mixin desktop {
-  @media (max-width: rem(1199.98)) {
+  @media (min-width: 992px) {
     @content;
   }
-}
-
-// X-Large devices (large desktops, less than 1400px)
-@mixin desktop-large {
-  @media (max-width: rem(1399.98)) {
-    @content;
-  }
-}
-
-// all desktop devices
-@mixin desktop-all {
-  @media (min-width: rem(1199.98)) {
-    @content;
-  }
-}
-
-@function rem($value) {
-  @return calc($value / 16)
 }
