--- a/client/src/components/Auth/Auth.scss
+++ b/client/src/components/Auth/Auth.scss
@@ -1,7 +1,11 @@
+@import '../mixins.scss';
+
 .auth-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .auth-content {
@@ -17,26 +21,34 @@
   .auth-buttons {
     display: flex;
     align-items: center;
-    padding: 4px 0;
-
-    .auth-button {
-      width: 80px;
-      padding: 2.5px 16px;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color .2s ease;
-      background-color: #FFA500;
-
-      &:hover {
-        background-color: #FF8C00;
-      }
-    }
 
     .auth-message {
       margin-left: 10px;
+      font-size: 14px;
+      font-weight: bold;
+      cursor: pointer;
+
+      @include tablet {
+        font-size: 13px;
+      }
     }
+  }
+}
+
+.auth-button {
+  width: 80px;
+  padding: 1.5px 16px;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color .1s ease;
+  background-color: #FFA500;
+  margin-top: 4px;
+  margin-bottom: 4px;
+
+  &:hover {
+    background-color: #FF8C00;
   }
 }
 
@@ -53,6 +65,20 @@
   justify-content: center;
 }
 
-.auth-message {
-  cursor: pointer;
+.auth__welcome-message {
+  padding-top: 10px;
+  margin-right: 10px;
+
+  @include tablet {
+    padding-top: 0;
+    margin-right: 0;
+  }
+}
+
+.auth-options {
+  margin: 0 20px;
+
+  @include tablet {
+    margin: 0;
+  }
 }
