--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -51,6 +51,7 @@
     border: 2px solid #FF8C00;
     padding: 10px;
     box-shadow: 0 6px 6px rgba(0, 0, 0, 0.1);
+    border-radius: .8px;
   }
 
   .logo {
