--- a/client/src/components/Auth/Auth.scss
+++ b/client/src/components/Auth/Auth.scss
@@ -6,6 +6,10 @@
   align-items: flex-start;
   padding-left: 10px;
   padding-right: 10px;
+
+  @include tablet {
+    padding-left: 0;
+  }
 }
 
 .auth-content {
@@ -22,17 +26,28 @@
     display: flex;
     align-items: center;
 
-    .auth-message {
-      margin-left: 10px;
-      font-size: 14px;
-      font-weight: bold;
-      cursor: pointer;
-
-      @include tablet {
-        font-size: 13px;
-      }
+    @include tablet {
+      margin-top: 5px;
     }
   }
+
+  @include tablet {
+    padding-left: 10px;
+  }
+}
+
+.auth-message {
+  margin-left: 10px;
+  font-size: 14px;
+  cursor: pointer;
+
+  @include tablet {
+    font-size: 13px;
+  }
+}
+
+.initial {
+  font-size: 16px;
 }
 
 .auth-button {
@@ -49,6 +64,7 @@
 
   &:hover {
     background-color: #FF8C00;
+    cursor: pointer;
   }
 }
 
@@ -72,6 +88,7 @@
   @include tablet {
     padding-top: 0;
     margin-right: 0;
+    padding-left: 10px;
   }
 }
 
