--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -1,31 +1,41 @@
 @import '../mixins.scss';
 
 .navbar {
-  padding: 10px, 0;
+  margin-top: 20px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   border-bottom: 3px solid #ccc;
   padding-left: 90px;
   padding-right: 90px;
   position: relative;
 
   @include tablet {
-    padding-left: 30px;
-    padding-right: 30px;
+    width: 750px;
     border-bottom: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin: 20px auto;
   }
 
   @include phone {
-    padding-left: 14px;
-    padding-right: 14px;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 320px;
+    padding-left: 0 2%;
+  }
+
+  .menu-and-logo-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
   }
 
   .menu-toggle {
     display: block;
     cursor: pointer;
+    padding-left: 20px;
     padding-right: 30px;
-    padding-left: 30px;
 
     @include desktop {
       display: none;
@@ -37,7 +47,7 @@
     }
 
     @include phone {
-      padding-left: 10px;
+      padding-left: 0px;
     }
   }
 
@@ -52,6 +62,15 @@
     padding: 10px;
     box-shadow: 0 6px 6px rgba(0, 0, 0, 0.1);
     border-radius: .8px;
+
+    @include tablet {
+      margin-left: 80px
+    }
+
+    @include phone {
+      margin-left: 10px;
+      margin-top: 76px;
+    }
   }
 
   .logo {
@@ -125,10 +144,14 @@
       }
 
       @include phone {
-        padding-left: 0;
+        padding-left: 10px;
         flex-direction: column;
         margin-top: 10px;
+
+        align-items: space-between;
       }
     }
   }
+
+
 }
