--- a/client/src/components/Recipe/Recipe.scss
+++ b/client/src/components/Recipe/Recipe.scss
@@ -1,7 +1,9 @@
 @import '../mixins.scss';
 
 .recipe {
-  margin: 20px auto;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 1100px;
   padding: 0 2%;
   display: flex;
@@ -81,6 +83,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
+  @include phone {
+    margin-top: 14px;
+    justify-content: flex-start;
+  }
 }
 
 .likes,
@@ -122,11 +129,11 @@
 .socials {
   display: flex;
   align-items: center;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 
   @include phone {
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 20px;
   }
 }
