--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -5,7 +5,18 @@
   flex-direction: row;
 
   @include tablet {
-    width: 100%;
+    margin-top: 20px;
+    width: 600px;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin-bottom: 20px;
+  }
+
+  @include phone {
+    margin-top: 10px;
+    width: 340px;
+    flex-direction: column;
+    margin-bottom: 30px;
   }
 }
 
@@ -14,6 +25,21 @@
   flex-direction: column;
   margin: 0 30px;
   justify-content: space-between;
+
+  @include tablet {
+    margin: 0 0;
+    align-items: flex-start;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+.left-align {
+  @include phone {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
 
 .home {
@@ -27,13 +53,13 @@
   align-items: center;
 
   @include tablet {
-    max-width: 750px;
-    align-items: flex-start;
+    // max-width: 750px;
     padding: 0 2%;
   }
 
   @include phone {
-    max-width: 320px;
+    // max-width: 320px;
+    padding: 0 4%;
   }
 
   h1 {
@@ -41,9 +67,15 @@
     font-size: 36px;
 
     @include tablet {
-      // margin-left: 40px;
-      // margin-right: 40px;
-      // width: 600px;
+      font-size: 27px;
+      text-align: left;
+      width: 600px;
+      margin-bottom: 10px;
+    }
+
+    @include phone {
+      font-size: 24px;
+      width: 340px;
     }
   }
 }
@@ -52,53 +84,61 @@
   display: flex;
   gap: 20px;
 
-  @include desktop {
-    .headline-section {
-      flex: 3;
-      display: flex;
-      flex-direction: column;
-      align-items: stretch;
-    }
-
-    .highlighted-section {
-      flex: 2;
-      display: flex;
-      flex-direction: column;
-      align-items: stretch;
-    }
-  }
-
   @include tablet {
     flex-direction: column;
     gap: 0;
-    align-items: flex-start;
+    align-items: center;
+  }
+
+  .headline-section {
+    width: 600px;
+
+    @include phone {
+      width: 340px;
+    }
+  }
+
+  .highlighted-section {
+    width: 400px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+
+    @include tablet {
+      width: 600px;
+      margin-top: 8px;
+    }
+
+    @include phone {
+      width: 340px;
+    }
   }
 }
 
 .headline-section {
-  @include tablet {
-    // margin-left: 40px;
-    // margin-right: 40px;
+  h2 {
+    text-align: center;
 
-    h2 {
-      text-align: center;
+    @include tablet {
+      text-align: left;
+      font-size: 22px;
+    }
+
+    @include phone {
+      font-size: 20px;
     }
   }
-}
 
-.highlighted-section {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-
-  @include tablet {
-    width: 650px;
-
-    h2 {
-      text-align: center;
+  h3 {
+    @include phone {
+      font-size: 17px;
     }
+  }
+
+  @include phone {
+    width: 320px;
+    height: 470px;
   }
 }
 
@@ -111,13 +151,12 @@
     object-fit: cover;
   }
 
-  // @include tablet {
-  //   width: 100%;
-  // }
 }
 
 .highlighted-recipe {
   width: 100%;
+
+  @include tablet {}
 }
 
 .highlighted-recipes {
@@ -129,18 +168,23 @@
     margin-bottom: 20px;
 
     @include tablet {
-      margin-left: 20px;
+      margin-left: 30px;
+    }
+
+    @include phone {
+      margin-left: 19px;
     }
   }
 
   @include tablet {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    width: 600px;
+    padding: 5px 0px;
   }
 
+  @include phone {
+    width: 340px;
+    padding: 5px 0px;
+  }
 }
 
 .highlighted-recipe__content {
@@ -148,13 +192,28 @@
   flex-direction: row;
   align-items: stretch;
 
+  @include tablet {
+    justify-content: flex-start;
+    margin-left: 30px;
+  }
+
+  @include phone {
+    margin-left: 19px;
+  }
+
   h3 {
     width: 200px;
     margin-left: 10px;
     margin-right: 10px;
 
     @include tablet {
-      width: 300px;
+      width: 380px;
+      margin-right: 0;
+
+    }
+
+    @include phone {
+      width: 140px;
     }
   }
 
@@ -163,22 +222,10 @@
     height: 120px;
     object-fit: cover;
     margin-bottom: 5px;
-
-    @include tablet {
-      width: 250px;
-      margin-left: 20px;
-    }
   }
 }
 
-.image--headline {
-  @include tablet {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-}
+.image--headline {}
 
 h3 {
   &:hover {
@@ -191,6 +238,7 @@ h3 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 40px;
+  margin-bottom: 20px;
 
   li {
     list-style: none;
@@ -207,12 +255,42 @@ h3 {
     }
   }
 
+  @include tablet {
+    margin-top: 30px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px;
+  }
+
+  @include phone {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    margin-top: 24px;
+    margin-bottom: 10px;
+  }
+}
+
+.grid-unit {
+  width: 320px;
+  height: 320px;
+
   img {
     margin-bottom: 1px;
-    width: 100%;
-    height: auto;
-    max-height: 150px;
+    width: 320px;
+    height: 200px;
     object-fit: cover;
+  }
+
+  // @include tablet {
+  //   display: flex;
+  //   flex-direction: row;
+  //   justify-content: center;
+  // }
+
+  @include phone {
+    height: 330px;
   }
 }
 
@@ -223,23 +301,29 @@ h3 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 30px;
   margin-bottom: 10px;
   border-radius: 10px;
   font-size: 50px;
   background-color: #FFC0B7;
   color: #FFF8F0;
 
-  @include tablet {
-    font-size: 36px;
+  @include phone {
+    margin-top: 0px;
+    height: 120px;
+
+    h5 {
+      font-size: 24px;
+      padding: 0 30px;
+    }
   }
 
-  @include phone {
-    font-size: 19px;
+  @include tablet {
+    font-size: 36px;
   }
 }
 
 .drink {
-  background-color: #F9F871;
-  color: black;
+  background-color: #C3FCF2;
+  color: #00362F;
 }
