--- a/client/src/components/Recipe/Recipe.scss
+++ b/client/src/components/Recipe/Recipe.scss
@@ -111,13 +111,15 @@
   cursor: pointer;
   transition: background-color .1s ease;
   height: 30px;
-  width: 100px;
+  width: 80px;
 }
 
 .movie-container {
   .button {
+    @include tablet {}
+
     @include phone {
-      margin-top: 10px;
+      margin-top: 30px;
     }
   }
 }
@@ -160,5 +162,13 @@
   @include phone {
     max-width: 320px;
     max-height: 300px;
+  }
+}
+
+.dietary-restriction,
+.movie-genre,
+.button {
+  @include phone {
+    margin-top: 30px;
   }
 }
