--- a/client/src/components/Recipe/Recipe.scss
+++ b/client/src/components/Recipe/Recipe.scss
@@ -179,6 +179,7 @@
 .social-icon {
   width: 40px;
   margin-left: 12px;
+  cursor: pointer;
 }
 
 .image-container {
@@ -205,5 +206,43 @@
 .movie-genre {
   @include phone {
     margin-top: 30px;
+  }
+}
+
+@media print {
+  .recipe {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 2%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1100px;
+  }
+
+  .top-container {
+    display: flex;
+    flex-direction: row;
+    padding: 0 10px;
+    width: 700px;
+    margin-top: 30px;
+  }
+
+  .title,
+  .description,
+  .ingredients,
+  .instructions,
+  .socials,
+  .meal-container,
+  .movie-container,
+  .movie-info-container {
+    width: 100%;
+    margin: 0;
+    text-align: center;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
   }
 }
