adding dinner section to home page and slightly changing navbar dropdown styling

--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -328,3 +328,9 @@ h3 {
   color: #00362F;
   margin-top: 10px;
 }
+
+.dinner {
+  background-color: #7698C9;
+  color: #DDF2FF;
+  margin-top: 10px;
+}
